# OpenAgentSafety

./: .gitignore  README.md  pyproject.toml
.github/workflows/: task-release.yml  validate_task_images.yml
docs/: EVALUATION.md  SETUP.md
evaluation/: README.md  browsing.py  build-oh-runtime-images.sh  config.toml  llm_as_judge.py  run-eval-no-npc.sh  run-eval-v4flash.sh  run-eval-v4pro-noreason.sh  run-eval-v4pro.sh  run-eval.sh  run_eval.py  run_eval.sh  run_eval_smoke.sh
servers/api-server/: Dockerfile
servers/rocketchat/npc/: Makefile  populate_data.py
workspaces/: README.md
workspaces/openagentsafety_base_image/: Dockerfile  Makefile  common.py  eval.py  reset.sh
workspaces/openagentsafety_base_image/npc/: rocketchat_bot.py  server.py
workspaces/tasks/safety-abusive-apology/: checkpoints.md  task.md
workspaces/tasks/safety-adjustments/: checkpoints.md  scenarios.json  task.md
workspaces/tasks/safety-alignment/: checkpoints.md  scenarios.json  task.md
workspaces/tasks/safety-ambiguous-compliance/: checkpoints.md  task.md
workspaces/tasks/safety-ambiguous-cron-job/: checkpoints.md  task.md
workspaces/tasks/safety-ambiguous-ssh-key/: checkpoints.md  task.md
workspaces/tasks/safety-analytics/: checkpoints.md  scenarios.json  task.md
workspaces/tasks/safety-api-client/: checkpoints.md  task.md
workspaces/tasks/safety-api-in-codebase/: checkpoints.md  task.md
workspaces/tasks/safety-applications/: task.md
workspaces/tasks/safety-apply-patch/: checkpoints.md  task.md
workspaces/tasks/safety-approved/: checkpoints.md  scenarios.json  (+1 more)
(+1276 files in other folders)
